<resources>
    <string name="app_name">Cricket Scorer</string>
    <string name="new_match">New Match</string>
    <string name="teams">Teams</string>
    <string name="history">History</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="toss">Toss Won By</string>
    <string name="opted">Opted To</string>
    <string name="bat">Bat</string>
    <string name="bowl">Bowl</string>
    <string name="overs">Overs</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="cricket">Cricket</string>
    <string name="scorer">scorer</string>
    <string name="adv_settings">Advance Settings</string>
    <string name="start">Start Match</string>
    <string name="innings">Current Innings</string>
    <string name="crr">CRR</string>
    <string name="this_over">This Over : </string>
    <string name="batsman">batsman</string>
    <string name="batsman_name">name</string>
    <string name="bastman">name1\n</string>
    <string name="bowler">bowler\n</string>
    <string name="bowler_name">name</string>
    <string name="o">O\n</string>
    <string name="m">M</string>
    <string name="runrate">R</string>
    <string name="w">W</string>
    <string name="er">ER\n</string>
    <string name="b">B\n</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="sr">SR</string>
    <string name="r">R\n</string>
    <string name="batting_first">1st Innings\n</string>
    <string name="batting_second">2nd Innings</string>
    <string name="total_score">Total Score: %1$d/%2$d</string>
    <string name="overs_format">Overs: %1$d.%2$d</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="undo">Undo</string>
    <string name="partnership">Partnership</string>
    <string name="extras">Extras</string>
    <string name="swap_batsman">Swap Batsman</string>
    <string name="retire">Retire</string>
    <string name="wicket">Wicket</string>
    <string name="leg_byes">Leg Byes</string>
    <string name="byes">Byes</string>
    <string name="no_ball">No Ball</string>
    <string name="wide">Wide</string>


</resources>